TESTS = check_lval check_lenv
check_PROGRAMS = check_lval check_lenv
check_lval_SOURCES = check_lval.c $(top_builddir)/src/lval.c $(top_builddir)/src/mpc.c minunit/minunit.h $(top_builddir)/src/lenv.c
check_lenv_SOURCES = check_lenv.c $(top_builddir)/src/lval.c $(top_builddir)/src/mpc.c minunit/minunit.h $(top_builddir)/src/lenv.c
LDADD = $(DEPS_LIBS)
